fix: invisible scrollbars

--- a/public/style.css
+++ b/public/style.css
@@ -12,12 +12,6 @@ nav a {
 }
 
 /* invisible scrollbars */
-.element::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 0 !important;
-}
-.element {
-  overflow: -moz-scrollbars-none;
-}
-.element {
-  -ms-overflow-style: none;
 }
